crates/unsoundness_checker/tests/snapshots/type_checking_directive_used/markdown_test__snippet_03.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
error[type-checking-directive-used]: Type checking directive `ty: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_03.py:1:30
  |
1 | result = unsafe_operation()  # ty: ignore[unresolved-import]
  |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
2 | data = get_data()  # ty: ignore[attr-defined]
  |
info: rule `type-checking-directive-used` was selected in the configuration file

error[type-checking-directive-used]: Type checking directive `ty: ignore` suppresses type checker warnings, which may hide potential type errors.
 --> snippet_03.py:2:20
  |
1 | result = unsafe_operation()  # ty: ignore[unresolved-import]
2 | data = get_data()  # ty: ignore[attr-defined]
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
info: rule `type-checking-directive-used` was selected in the configuration file
